// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente <SearchScreen/> debe de mostrar a batman y el input con el valor del querryString 1`] = `
<div>
  <h1>
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="search"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman"
        />
        <button
          className="btn m-1 btn-block btn-primary"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <a
        href="/hero/dc-batman"
        onClick={[Function]}
      >
        <div
          className=" card bg-dark ms-3 ps-1 pe-1 pt-1 pb-1 "
          style={
            Object {
              "color": "#ffc107",
              "maxWidth": "640px",
            }
          }
        >
          <img
            alt="Batman"
            className="card-img "
            src="./assets/heroes/dc-batman.jpg"
            style={
              Object {
                "position": "relative",
              }
            }
          />
          <div
            className="card-img-overlay"
            style={
              Object {
                "marginTop": "250px",
                "textShadow": "-1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000",
              }
            }
          >
            <h5
              className=" card-title fs-4"
            >
              Batman
            </h5>
            <p
              className="card-text"
              style={
                Object {
                  "color": "white",
                }
              }
            >
              Alterego: 
              Bruce Wayne
            </p>
          </div>
        </div>
      </a>
      <hr />
    </div>
  </div>
</div>
`;

exports[`Pruebas en el componente <SearchScreen/> debe de mostrar un error si no se encuentra el hero 1`] = `
<div>
  <h1>
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="search"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman!"
        />
        <button
          className="btn m-1 btn-block btn-primary"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <div
        className="alert alert-danger"
      >
        There is no hero with a name of: 
        <b>
          batman!
        </b>
      </div>
      <hr />
    </div>
  </div>
</div>
`;

exports[`Pruebas en el componente <SearchScreen/> debe de mostrarse con valores por defecto 1`] = `
<div>
  <h1>
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="search"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value=""
        />
        <button
          className="btn m-1 btn-block btn-primary"
          type="submit"
        >
          Search
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Results
      </h4>
      <div
        className="alert alert-info"
      >
        Search a hero
      </div>
      <hr />
    </div>
  </div>
</div>
`;
